Fixed layout to align with example and fixed javascript

--- a/styles/base.css
+++ b/styles/base.css
@@ -28,17 +28,15 @@ header{
     color: var(--accent-color2);
     align-items: center;
     justify-content: center;
-    padding: 20px;
-    border: 1px solid var(--accent-color2);
-    margin: 0 auto;
+}
+header h1{
+    display: flex;
+    text-align: center;
 }
 nav{
     background-color: var(--primary-color);
     color: var(--accent-color1);
-    display: flex;
-    align-items: center;
     margin: 0 auto;
-    max-width: 800px;
 }
 nav ul{
     list-style-type: none;
@@ -46,8 +44,6 @@ nav ul{
 nav a{
     display: block;
     color: var(--accent-color1);
-    text-align: center;
-    padding: 1rem;
     text-decoration: none;
 }
 nav a:hover{
@@ -55,46 +51,89 @@ nav a:hover{
 }
 nav ul{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    text-align: center;
 }
 nav ul li{
     flex: 1 1 100%;
 }
 main{
-    width: 500px;
-       
+   display: grid;
+   grid-template-columns: auto auto auto;
 }
-h1{
-    background-color: var(--secondary-color);
-    color: var(--accent-color1);
+section{
+    border-style: double;
+    border-color: var(--secondary-color);
+    border-radius: 2%;
 }
-.card{
+.about{
+    grid-column: 1 /3;
+}
+.resources{
+    grid-column: 3 /4;
+}
+.about{
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(10, min-content);
- 
+    grid-template-rows: auto auto auto auto auto auto auto;
+    grid-template-columns: auto auto auto;
+    column-gap: 0px;
 }
-
-.about h1{
-    grid-column: 1 / span 3;
-    grid-row: span 1;
+.about h2{
+    grid-row: 1 / 2;
+    grid-column: 1 / 8;
+    width: 100%;
 }
 .about img{
-    grid-column: 3/ span 1;
-    grid-row: 2 / span 2;
+    grid-row: 2/3;
+    grid-column: 3/4;
+    height: 150px;
+    width: auto;
 }
-.about p{
-    grid-column: 1;
-    grid-row: 2/ span 2;
+.about p1{
+    grid-row: 2/3;
+    grid-column: 1 / 3;
+    text-indent: 2rem;
+    padding: 1rem;
 }
-.home h1{
-    grid-column: 1 / span 3;
-    grid-row: 3 / span 1;
+.about h3{
+    grid-row: 3/4;
+    grid-column: 1 / 2;
+    
 }
+.about figure{
+    grid-row: 4 / 6;
+    grid-column: 1/2;
+}
+.about figure img{
+    width: 150px;
+    height: auto;
+}
+.about figcaption{
+    grid-row: 6 / 7;
+    grid-column: 1/2;
+}
+.about p2{
+    grid-row: 4 / 8;
+    grid-column: 2 / 3;
+    text-indent: 2rem;
+}
+section h2{
+    text-align: center;
+    color: var(--accent-color2);
+    background-color: var(--secondary-color);
+}
+h3{
+    text-decoration: underline;
+    text-decoration-color: black;
+}
+
+.resources li{
+    margin-left: 30px;
+
+}
+
 footer{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
     background-color: var(--primary-color);
     color: var(--accent-color2);
 }
